--- a/HsbcDatabase/HsbcDatabase/HsbcDatabase.csproj
+++ b/HsbcDatabase/HsbcDatabase/HsbcDatabase.csproj
@@ -65,8 +65,19 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="HsbcDbDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>HsbcDbDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="withdaw.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="withdaw.Designer.cs">
+      <DependentUpon>withdaw.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -79,6 +90,20 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="withdaw.resx">
+      <DependentUpon>withdaw.cs</DependentUpon>
+    </EmbeddedResource>
+    <None Include="HsbcDbDataSet.xsc">
+      <DependentUpon>HsbcDbDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="HsbcDbDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>HsbcDbDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="HsbcDbDataSet.xss">
+      <DependentUpon>HsbcDbDataSet.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
